--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,11 +1,53 @@
 <!DOCTYPE html>
-<html>
-  <head>
-    <title><%= title %></title>
-    <link rel='stylesheet' href='/stylesheets/style.css' />
-  </head>
-  <body>
-    <h1><%= title %></h1>
-    <p>Welcome to <%= title %></p>
-  </body>
+<html lang="en">
+<head>
+	<meta charset="UTF-8">
+	<title>Booc Marc</title>
+	<link rel='stylesheet' href='/stylesheets/style.css' />
+	<!-- Latest compiled and minified CSS -->
+	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" integrity="sha384-1q8mTJOASx8j1Au+a5WDVnPi2lkFfwwEAa8hDDdjZlpLegxhjVME1fgjWPGmkzs7" crossorigin="anonymous">
+
+	<!-- Optional theme -->
+	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap-theme.min.css" integrity="sha384-fLW2N01lMqjakBkx3l/M9EahuwpSfeNvV63J5ezn3uZzapT0u7EYsXMjQV+0En5r" crossorigin="anonymous">
+
+	
+	<script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.2.29/angular.js"></script>
+    
+    <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.2.29/angular-route.js">
+   </script>
+   <script src="https://code.jquery.com/jquery-1.11.3.min.js"></script>
+   
+
+</head>
+<body ng-app = "boocmarc">
+
+	<nav class="navbar navbar-default navbar-fixed-top">
+	  <div class="container-fluid">
+	    <div class="navbar-header">
+	      <a class="navbar-brand" href="#">
+	        <img alt="Brand" src="http://i.imgur.com/3MZLsTZ.png">
+	      </a>
+	    </div>
+	  </div>
+	</nav>
+
+	<div class="row trendbook" ng-controller="ContentCtrl as content" >
+	  <div class="col-sm-6 col-md-4" ng-repeat="book in content.books | orderBy : '-comments.count'">
+	    <div class="thumbnail">
+	      <img src="{{book.imgUrl}}" >
+	      <div class="caption">
+	        <h3>{{book.name}}</h3>
+	        <p>作者：{{book.author}}</p>
+	      </div>
+	    </div>
+	  </div>
+	</div>
+
+
+
+	<!-- Latest compiled and minified JavaScript -->
+	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js" integrity="sha384-0mSbJDEHialfmuBBQP6A4Qrprq5OVfW37PRR3j5ELqxss1yVqOtnepnHVP9aJ7xS" crossorigin="anonymous"></script>
+	<script src="javascripts/angularApp.js"></script>
+</body>
 </html>
+
