--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -1,6 +1,8 @@
 body {
-  padding: 50px;
+  padding-top: 50px;
   font: 14px "Lucida Grande", Helvetica, Arial, sans-serif;
+  overflow-x: hidden;
+
 }
 
 a {
@@ -9,4 +11,66 @@ a {
 
 .trendbook{
 	margin-top: 15px;
+}
+.Container {
+    display: flex;
+    overflow: hidden;
+    height: 100vh;
+    margin-top: -100px;
+    padding-top: 100px;
+    position: relative;
+    width: 100%;
+    backface-visibility: hidden;
+    will-change: overflow;
+}
+
+/*All the scrollable sections should overflow and be whatever height they need to be. As they are flex-items (due to being inside a flex container) they could be made to stretch full height at all times if needed.
+WebKit inertia scrolling is being added here for any present/future devices that are able to make use of it.
+*/
+.Left,
+.Middle,
+.Right {
+    overflow: auto;
+    height: auto;
+    padding: .5rem;
+    width:50%;
+    -webkit-overflow-scrolling: touch;
+    -ms-overflow-style: none;
+}
+/*Entirely optional – just wanted to remove the scrollbar on WebKit browsers as I find them ugly*/
+.Left::-webkit-scrollbar,
+.Middle::-webkit-scrollbar,
+.Right::-webkit-scrollbar {
+    display: none;
+}
+
+.book-image{
+	display: inline-block;
+	width: 30%;
+}
+.book-image img{
+	width: 100%;
+	min-width: 150px;
+}
+
+.book-info{
+	display: inline-block;
+	width: 68%;
+}
+
+.booklist{
+	margin-bottom:15px;
+	padding-bottom: 9px;
+	border-bottom: 1px #E8E8E8 solid;
+}
+
+@media screen and (max-width: 480px){
+	.book-image,.book-info{
+		display: block;
+		width: 100%;
+	}
+	.book-image img{
+		min-width: 180px;
+	}
+
 }
