--- a/views/index.ejs
+++ b/views/index.ejs
@@ -21,48 +21,19 @@
 </head>
 <body ng-app = "boocmarc">
 
-	<nav class="navbar navbar-default navbar-fixed-top">
-	  <div class="container-fluid">
+	<nav class="navbar navbar-default navbar-fixed-top navtop">
+	  <div class="container-fluid nav-own">
 	    <div class="navbar-header">
-	      <a class="navbar-brand" href="#">
-	        <img alt="Brand" src="http://i.imgur.com/3MZLsTZ.png">
-	      </a>
+	 	<form class="navbar-form navbar-left" role="search">
+	        <div class="form-group">
+	          <input type="text" class="form-control" placeholder="Search">
+	        </div>
+	        <button type="submit" class="btn btn-default">Submit</button>
+	      </form>
 	    </div>
 	  </div>
 	</nav>
-	<div class="Container">
-        <div class="Left">
-        	<div class="row trendbook" ng-controller="TrendBookCtrl as trendbook" >
-			  <div class="col-sm-12 col-md-12" ng-repeat="book in trendbook.books | orderBy : '-comments.count'">
-			    <div class="booklist">
-			    	<div class="book-image">
-			    		 <img src="{{book.imgUrl}}">
-			    	</div>
-				    <div class="book-info">
-				    	<h4>{{book.name}}</h4>
-				        <p>作者：{{book.author}}</p>
-				    </div>
-			    </div>
-			  </div>
-			</div>
-        </div>
-        
-        <div class="Right">
-			<div class="row trendbook" ng-controller="DisscussBookCtrl as discussbook" >
-			  <div class="col-sm-12 col-md-12" ng-repeat="book in discussbook.books | orderBy : 'comments.count'">
-			    <div class="booklist">
-			      <div class="book-image">
-			    		 <img src="{{book.imgUrl}}">
-			    	</div>
-				    <div class="book-info">
-				    	<h4>{{book.name}}</h4>
-				        <p>作者：{{book.author}}</p>
-				    </div>
-			    </div>
-			  </div>
-			</div>
-        </div>
-    </div>
+	<div ng-view class="content-view"></div>
 	
 
 
@@ -70,6 +41,7 @@
 	<!-- Latest compiled and minified JavaScript -->
 	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js" integrity="sha384-0mSbJDEHialfmuBBQP6A4Qrprq5OVfW37PRR3j5ELqxss1yVqOtnepnHVP9aJ7xS" crossorigin="anonymous"></script>
 	<script src="javascripts/angularApp.js"></script>
+	
 </body>
 </html>
 
