--- a/views/index.ejs
+++ b/views/index.ejs
@@ -30,15 +30,10 @@
 	    </div>
 	    <div class="navbar-right">
 	    	<ul>
-	    		<li>
-	    			<a class="btn-none" href="/login">登入</a>
-	    		</li>
-	    		<li>
-	    			<a class="btn-blue" href="/register">註冊</a>
-	    		</li>
+	    		<li><a class="btn-none" href="/login">登入</a></li>
+	    		<li><a class="btn-blue" href="/register">註冊</a></li>
 	    	</ul>
-	    </div>
-	    
+	    </div>    
 	  </div>
 	</nav>
 
