fix all the bug of home page

--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -280,3 +280,12 @@ a {
 .book-author{
     color: black;
 }
+
+.book-title{
+    height: 40px;
+    overflow: hidden;
+}
+
+.book-image{
+    min-height: 200px;
+}
