fix collapse navbar

--- a/public/partials/home.html
+++ b/public/partials/home.html
@@ -1,12 +1,15 @@
 <div class="banner row">
 	<div class="col-md-12">
 		<div class="banner-container">
-			<h1 class="banner-intro">找到和你一樣愛讀書的朋友。</h1>
+			<h1 class="banner-intro">找到和你一樣愛閱讀的朋友。</h1>
 			<div class="search-container">
 				<div class="search-wrapper">
 					<form class="form-wrapper cf" action method="get" class="search-form">
 						<input type="text" placeholder="正在看什麼書呢？">
-						<button type="submit">Search</button>
+						<button type="submit">
+							<span class="search-web">Search</span>
+							<span class="search-mobile"><span class="glyphicon glyphicon-search"></span></span>
+						</button>
 					</form>
 				</div>
 			</div>
