--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -3,7 +3,10 @@ body {
   line-height: 21px;
   font-family: 'OpenSans',Arial,sans-serif;
   overflow-x: hidden;
-
+  height: 100%;
+}
+html{
+    height: 100%;
 }
 
 a {
@@ -15,14 +18,16 @@ a {
 }
 
 .nav-own{
-	background-color: #161d20;
+	background-color: white;
 }
 
 .navtop{
 	border-width:0px;
 }
 
-
+.content-view{
+    margin-top:64px; 
+}
 
 .discussion-author{
 	color:gray;
@@ -30,7 +35,7 @@ a {
 }
 
 .foot{
-	margin:0px;
+	margin-top:30px;
 }
 
 .footer-container{
@@ -291,6 +296,12 @@ a {
     min-height: 200px;
 }
 
+.book-image-sm{
+    max-height: 200px;
+    display:block;
+    margin:0 auto;
+}
+
 .search-web{
     display: initial;
 }
@@ -331,6 +342,62 @@ a {
     .nav-mobile{
         display: initial;
     }
+
+    .content-view{
+        margin-top:59px; 
+    }
+}
+
+.book-info{
+    height: 100%;
+}
+
+.book-info-image{
+    display:block;
+    margin:0 auto;
+    padding: 40px 0;
+}
+
+.discussions-content{
+    padding: 10px;
+    background-color: #F5F5F5;
+    min-height:500px!important;
+}
+
+.book-page{
+    margin-top: 0px;
+    background-color: #202f3a;
+    min-height:500px;
+    height: 100%;
 }
 
 
+.book-info-details{
+    font-size: 16px;
+    line-height: 30px;
+    color:rgba(255, 255, 255, 0.8);
+    font-family: 'OpenSans',Arial,sans-serif;
+    vertical-align: middle;
+    /*text-align: center;*/
+    height: inherit;
+    width: 200px;
+    margin: 0 auto;
+}
+
+ul{
+    list-style-type: none;
+    padding: 0px;
+}
+
+.card{
+  width: 100%;
+  min-height: 110px;
+  margin-top: 1px;
+  -webkit-box-shadow: 0px 0px 32px -9px rgba(0,0,0,0.75);
+    -moz-box-shadow: 0px 0px 32px -9px rgba(0,0,0,0.75);
+    box-shadow: 0px 0px 32px -9px rgba(0,0,0,0.75);
+}
+
+.discussions-container{
+    padding: 0 50px;
+}
