--- a/views/index.ejs
+++ b/views/index.ejs
@@ -6,22 +6,23 @@
 	<link rel='stylesheet' href='/stylesheets/style.css' />
 	<!-- Latest compiled and minified CSS -->
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" integrity="sha384-1q8mTJOASx8j1Au+a5WDVnPi2lkFfwwEAa8hDDdjZlpLegxhjVME1fgjWPGmkzs7" crossorigin="anonymous">
-
 	<!-- Optional theme -->
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap-theme.min.css" integrity="sha384-fLW2N01lMqjakBkx3l/M9EahuwpSfeNvV63J5ezn3uZzapT0u7EYsXMjQV+0En5r" crossorigin="anonymous">
 
 	<script src="https://code.jquery.com/jquery-1.11.3.min.js"></script>
+	
 	<script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.2.29/angular.js"></script>
     
     <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.2.29/angular-route.js">
    </script>
+
    
    
 
 </head>
 <body ng-app = "boocmarc">
 
-	<nav class="navbar navbar-default">
+	<nav class="navbar navbar-default navbar-fixed-top">
 	  <div class="container-fluid">
 	    <div class="navbar-header">
 	      <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#myNavbar">
@@ -48,7 +49,7 @@
 	  </div>
 	</nav>
 
-	<div ng-view class="content-view"></div>
+	<div ng-view class="content-view" autoscroll="true"></div>
 	
 	<div class="panel-default foot">
 	  <div class="footer-container">
