login reg login ok but need more decoration and want use float form

--- a/public/partials/book.html
+++ b/public/partials/book.html
@@ -36,7 +36,7 @@
 			  	<h4>{{discussion.title}}</h4>
 			  	<p>{{discussion.content}}</p>
 			  	<span class="badge glyphicon glyphicon-arrow-up">{{discussion.upvotes}}</span>
-			  	<span class="badge glyphicon glyphicon-comment">{{discussion.comments}}</span>
+			  	<span class="badge glyphicon glyphicon-comment">{{discussion.comments.length}}</span>
 			  	<p>By.{{discussion.author}}</p>
 			  </a>
 			</div>
