--- a/public/partials/register.html
+++ b/public/partials/register.html
@@ -1,22 +1,15 @@
-<div ng-show="error" class="alert alert-danger row">
-    <span>{{ error.message }}</span>
+<div class="banner">
+  <div class="login-block">
+    <h1>Reader Register</h1>
+    <span ng-show="error" class="logreg-error">{{ error.message }}</span>
+    <form ng-submit="register()" style="margin-top:30px;">
+      <div class="form-group">
+        <input type="text" class="form-control" placeholder="Username" id="username" ng-model="user.username"></input>
+      </div>
+      <div class="form-group">
+        <input type="password" class="form-control" placeholder="Password" id="password" ng-model="user.password"></input>
+      </div>
+      <button type="submit" class="btn btn-primary">Register</button>
+    </form>
   </div>
-
-  <form ng-submit="register()"
-    style="margin-top:30px;">
-    <h3>Register</h3>
-
-    <div class="form-group">
-      <input type="text"
-      class="form-control"
-      placeholder="Username"
-      ng-model="user.username"></input>
-    </div>
-    <div class="form-group">
-      <input type="password"
-      class="form-control"
-      placeholder="Password"
-      ng-model="user.password"></input>
-    </div>
-    <button type="submit" class="btn btn-primary">Register</button>
-  </form>
+</div>
