--- a/views/index.ejs
+++ b/views/index.ejs
@@ -36,10 +36,10 @@
 	    </div>
 	   	<div class="navbar-right nav-web">
 	    	<ul>
-	    		<li ng-show="isLoggedIn()" ng-cloak><a>{{ currentUser() }}</a></li>
-      			<li ng-show="isLoggedIn()" ng-cloak><a href="" ng-click="logOut()">Log Out</a></li>
+	    		<li ng-show="isLoggedIn()" ng-cloak><a class="btn-none">{{ currentUser() }}</a></li>
+      			<li ng-show="isLoggedIn()"  ng-cloak><a href="" class="btn-colorful" ng-click="logOut()">Log Out</a></li>
 	    		<li><a class="btn-none" ng-hide="isLoggedIn()" href="/login">登入</a></li>
-	    		<li><a class="btn-blue" ng-hide="isLoggedIn()" href="/register">註冊</a></li>
+	    		<li><a class="btn-colorful" ng-hide="isLoggedIn()" href="/register">註冊</a></li>
 	    	</ul>
 	    </div>    
 	    <div class="collapse navbar-collapse " id="myNavbar">
