--- a/views/index.ejs
+++ b/views/index.ejs
@@ -2,6 +2,10 @@
 <html lang="en">
 <head>
 	<meta charset="UTF-8">
+	<meta name="viewport" content="user-scalable=0">
+	<meta name="viewport" content="user-scalable=no">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	
 	<title>Booc Marc</title>
 	<link rel='stylesheet' href='/stylesheets/style.css' />
 	<!-- Latest compiled and minified CSS -->
