--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -319,34 +319,7 @@ a {
 }
 
 
-@media screen and (max-width: 480px) {
-    .search-web{
-        display: none;
-    }
 
-    .search-mobile{
-        display:initial;
-    }
-
-    .book-container{
-        width:90%;
-    }
-}
-
-@media screen and (max-width: 768px) {
-
-    .nav-web{
-        display: none;
-    }
-
-    .nav-mobile{
-        display: initial;
-    }
-
-    .content-view{
-        margin-top:59px; 
-    }
-}
 
 .book-info{
     height: 100%;
@@ -484,4 +457,60 @@ ul{
 .logreg-error{
     color:red;
     font-size: 12px;
+}
+
+.popup{
+    position: absolute;
+    padding:150px 0 0 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0.47);
+    z-index: 100;
+}
+
+.post-form{
+    width: 50%;
+    min-width: 300px;
+    margin: 0 auto;
+    padding: 30px;
+    background-color: whitesmoke;
+    border-radius: 5px;
+}
+
+
+@media screen and (max-width: 480px) {
+    .search-web{
+        display: none;
+    }
+
+    .search-mobile{
+        display:initial;
+    }
+
+    .book-container{
+        width:90%;
+    }
+
+    .popup{
+        padding: 30px 0;
+    }
+}
+
+@media screen and (max-width: 768px) {
+
+    .nav-web{
+        display: none;
+    }
+
+    .nav-mobile{
+        display: initial;
+    }
+
+    .content-view{
+        margin-top:59px; 
+    }
+
+    .popup{
+        padding: 30px 0;
+    }
 }
