--- a/public/partials/register.html
+++ b/public/partials/register.html
@@ -4,10 +4,16 @@
     <span ng-show="error" class="logreg-error">{{ error.message }}</span>
     <form ng-submit="register()" style="margin-top:30px;">
       <div class="form-group">
-        <input type="text" class="form-control" placeholder="Username" id="username" ng-model="user.username"></input>
+        <input pattern=".{8,}"   required title="Username should be at least 8 letters" type="text" class="form-control" placeholder="Username" id="username" ng-model="user.username"></input>
       </div>
       <div class="form-group">
-        <input type="password" class="form-control" placeholder="Password" id="password" ng-model="user.password"></input>
+        <input type="email" class="form-control" placeholder="Email" id="email" ng-model="user.email"></input>
+      </div>
+      <div class="form-group">
+        <input pattern=".{8,}"   required title="password should be at least 8 letters" type="password" class="form-control" placeholder="Password" id="password" ng-model="user.password"></input>
+      </div>
+      <div class="form-group">
+        <input pattern=".{8,}" required title="password should be at least 8 letters"  type="password" class="form-control" placeholder="Enter Password Again" id="passwordchk" ng-model="user.passwordchk"></input>
       </div>
       <button type="submit" class="btn btn-primary">Register</button>
     </form>
